# monty_python

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 15ac40aa23f5_set_single_parent.py  3b1a61fe421d_set_all_pronoun_fields_to_optional.py  a04c213a6c1c_set_cascade_options.py  b4285335612b_set_user_id_as_optional.py  bc8b32e8e22d_init_basic_migrations.py  fef088232db6_set_user_id_as_optional.py
monty/: bot.py  main.py
monty/cogs/: admin.py  events.py  info.py  misc.py  pronoun.py  time.py  user.py  weather.py
monty/daemon/: monty.service.mako  systemd.py
monty/db_models/: __init__.py  models.py
monty/modals/: pronounsetup.py
monty/util/: config.py  context.py  date.py  db.py  embed.py  help.py  math.py  permissions.py  traceback.py
prisma/: schema.prisma
