[tool.poetry]
name = "monty"
version = "0.1.0"
description = "A utility Discord bot for a few servers I am in."
authors = ["Duale Siad <me@wale.id.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.2.2"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
loguru = "^0.6.0"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.scripts]
monty = "monty.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
