[tool.poetry]
name = "monty"
version = "0.1.0"
description = "A utility Discord bot for a few servers I am in."
authors = ["Duale Siad <me@wale.id.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.2.2"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
loguru = "^0.6.0"
black = "^22.10.0"
isort = "^5.10.1"
httpx = "^0.23.0"
envtoml = "^0.1.2"
alembic = "^1.8.1"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.5"
pytz = "^2022.6"
humanize = "^4.4.0"

[tool.poetry.scripts]
monty = "monty.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip_glob = ["migrations/*"]